[tool.poetry]
name = "metaflow-diffusion"
version = "0.1.0"
description = ""
authors = ["Tu NGUYEN <jonathan.tunguyen@gmail.com>"]
readme = "README.md"
#packages = [{include = "metaflow-diffusion"}]

[tool.poetry.dependencies]
python = "^3.8"
metaflow = "^2.7.13"
nbformat = "5.4.0"
diffusers = "0.2.4"
transformers = "4.21.3"
scipy = "^1.9.1"
ftfy = "6.1.1"
matplotlib = "3.5.3"
jupyterlab = "3.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
